Refactoring code and fix battle components