@@ -1,87 +1,50 @@
 package org.example.piratelegacy.auth.controller;
 
 import lombok.RequiredArgsConstructor;
-import org.example.piratelegacy.auth.dto.CharacterInfo;
-import org.example.piratelegacy.auth.dto.CharacterSelectionRequest;
-import org.example.piratelegacy.auth.entity.enums.CharacterType;
-import org.example.piratelegacy.auth.entity.Hero;
+import lombok.extern.slf4j.Slf4j;
+import org.example.piratelegacy.auth.dto.CharacterOptionDto;
+import org.example.piratelegacy.auth.dto.UnitProfileDto;
+import org.example.piratelegacy.auth.dto.request.CharacterSelectionRequest;
+import org.example.piratelegacy.auth.dto.response.ApiResponse;
+import org.example.piratelegacy.auth.entity.Unit;
 import org.example.piratelegacy.auth.entity.User;
 import org.example.piratelegacy.auth.security.annotation.CurrentUser;
 import org.example.piratelegacy.auth.service.CharacterSelectionService;
-import org.example.piratelegacy.auth.service.QuestService;
+import org.example.piratelegacy.auth.service.GameConfigService;
+import org.example.piratelegacy.auth.service.UnitService; // <-- Убедитесь, что импорт есть
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
 
 import java.util.List;
-import java.util.Map;
-import java.util.Set;
+import java.util.stream.Collectors;
 
+@Slf4j
 @RestController
 @RequestMapping("/api/character")
 @RequiredArgsConstructor
 public class CharacterSelectionController {
 
     private final CharacterSelectionService characterSelectionService;
-    private final QuestService questService;
-
-    private static final Set<CharacterType> STARTER_CHARACTERS = Set.of(
-            CharacterType.BARBARIAN,
-            CharacterType.ARCHER
-    );
+    private final GameConfigService gameConfigService;
+    private final UnitService unitService; // <-- Убедитесь, что сервис добавлен
 
     @GetMapping("/options")
-    public ResponseEntity<List<CharacterInfo>> getCharacterOptions() {
-        List<CharacterInfo> options = STARTER_CHARACTERS.stream()
-                .map(this::toCharacterInfo)
-                .toList();
-
-        return ResponseEntity.ok(options);
+    public ResponseEntity<ApiResponse<List<CharacterOptionDto>>> getCharacterOptions() {
+        List<CharacterOptionDto> options = gameConfigService.getStarterCharacters().stream()
+                .map(CharacterOptionDto::fromCharacterStats)
+                .collect(Collectors.toList());
+        return ResponseEntity.ok(new ApiResponse<>(true, options));
     }
 
     @PostMapping("/select")
-    public ResponseEntity<Map<String, Object>> selectCharacter(
+    public ResponseEntity<ApiResponse<UnitProfileDto>> selectCharacter(
             @CurrentUser User user,
             @RequestBody CharacterSelectionRequest request) {
 
-        try {
-            Hero hero = characterSelectionService.selectCharacter(user, request);
-            questService.initializeFirstQuest(user);
+        Unit newHeroUnit = characterSelectionService.selectCharacter(user, request);
 
-            return ResponseEntity.ok(Map.of(
-                    "success", true,
-                    "message", "Персонаж успешно создан",
-                    "hero", hero
-            ));
-        } catch (RuntimeException e) {
-            return ResponseEntity.badRequest().body(Map.of(
-                    "success", false,
-                    "message", e.getMessage()
-            ));
-        }
-    }
+        UnitProfileDto profile = unitService.getUnitProfile(newHeroUnit.getId(), user);
 
-    @GetMapping("/current")
-    public ResponseEntity<Hero> getCurrentCharacter(@CurrentUser User user) {
-        try {
-            Hero hero = characterSelectionService.getUserCharacter(user);
-            return ResponseEntity.ok(hero);
-        } catch (RuntimeException e) {
-            return ResponseEntity.notFound().build();
-        }
-    }
-
-    private CharacterInfo toCharacterInfo(CharacterType characterType) {
-        return new CharacterInfo(
-                characterType.name(),
-                characterType.getDisplayName(),
-                characterType.getCombatClass().name(),
-                characterType.getCombatClass().getDisplayName(),
-                characterType.getBaseHp(),
-                characterType.getMinAttack(),
-                characterType.getMaxAttack(),
-                characterType.getBaseArmor(),
-                characterType.getSpecialAbility(),
-                characterType.hasSpecialAbility()
-        );
+        return ResponseEntity.ok(new ApiResponse<>(true, profile));
     }
 }
